# clarbe

./: .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOT_WORKING.md  OBJECTIVES.md  README.md  SECURITY.md  WORKING.md  build.sh  clarbe.toml  format.sh
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug-report.yml  feature-request.yml
commands/: build.cpp  command-template.tpp  init.cpp  new.cpp  run.cpp
compiler/: main.cpp
compiler_include/: consts.hpp  messages.h
include/: args.hpp  args.tpp  bproc.hpp  cmd_template.hpp  commands.hpp  consts.hpp  files.hpp  lexer.hpp  messages.h  procedures.hpp
include/commands/: conf.hpp  conf.tpp  files.hpp  files.tpp  libs.hpp  libs.tpp
include/compiler/: lexer.hpp  procedures.hpp
public/: NOT_WORKING.md  OBJECTIVES.md
public/diagrams/: clarbe.drawio
scripts/: build.bat  build.sh  unit-test.sh
src/: args.cpp  files.cpp  main.cpp  procedures.cpp
src/commands/: conf.cpp  files.cpp  libs.cpp
src/compiler/: lexer.cpp  procedures.cpp
tests/: main.cpp
